--- a/Subscription.Security/Subscription.Security.csproj
+++ b/Subscription.Security/Subscription.Security.csproj
@@ -15,4 +15,10 @@
     <ProjectReference Include="..\Subscription.Services\Subscription.Services.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Content Update="appsettings.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+  </ItemGroup>
+
 </Project>
